static/css/custom.css
html, body {
    min-width: 1165px;
    height:100%;
    color: #464646;
    background-color: #f8f9fa;
    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, メイリオ, Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "ＭＳ ゴシック" , "MS Gothic", "Noto Sans CJK JP", TakaoPGothic, sans-serif;
}

a {
    text-decoration: none;
}

a:hover {
    color: #4287f5;
    text-decoration: underline;
}

.font-15 {
    font-size: 15px;
}

.font-14 {
    font-size: 14px;
}

/* Main column for content (next to sidebar) */

.main-col {
    padding: 0px;
    min-width: 500px;
}

.main-content {
    padding-left: 12px;
    padding-right: 24px;
}

/* Sidebar elements */

.sidebar {
    padding-top: 24px;
    padding-left: 24px;
    width: 200px;
    text-align: center;
}

.nav-link {
    padding-top: 12px;
    padding-bottom: 12px;
    margin-top: 2px;
    margin-bottom: 2px;
}

.current-user {
    font-weight: 300;
    font-size: small;
    color: #464646;
    margin-bottom: 2px;
}

.search-hits{
    padding-top: 18px;
    padding-bottom: 2px;
    padding-left: 6px;
}


/* Tables */

tr {
    color: #464646;
}

.table-header-bg-1 {
    background-color:#fffde1;
}

.table-header-bg-2 {
    background-color:#eaffe1;
}

.table-header-bg-3 {
    background-color:#e1feff;
}

.table-header-bg-4 {
    background-color:#e1f8ff;
}

.table-body-bg {
    background-color: #fff;
}

.col-center-align {
    text-align: center;
}

.table-icons {
    text-decoration: none;
}

.first-icon {
    padding-right: 12px;
}

.table-icons:hover {
    color: #e76f51;
    text-decoration: none;
}

.table-muted-text {
    color: #909090;
}

/* Hover color for search results table */
/*
.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
  background-color: #fcfdff;
}
*/

/* Navbar */

.navbar {
    border-bottom: solid;
    border-width: 1px;
    border-color: #d5d5d5;
}

.navbar .dropdown-menu>li>a,.navbar .dropdown-menu {
    color:#3a7bf3;
}


/* Search bar */

.search-form {
    text-align: center;
}

.search-section {
    padding-top: 0px;
    padding-left: 0px;
}

.search-bar {
    width: 400px;
}

.glossary-dropdown {
    width: 350px;
}

.dropdown {
    list-style: none
}

.form-error {
    color: #da3749;
    font-size: 0.9em;
    font-weight: bold;
}

/* Removes asterisk from form labels */

.asteriskField {
    display: none;
}

/* Highlights query on search results page */

.highlight_query {
    color: #e76f51;
    font-weight: 600;
}

/* Glossary detail template */

.item-detail-heading {
    margin-top: 36px;
    margin-bottom: 20px;
}

.item-details {
    margin-top: 30px;
    margin-bottom: 30px;
}

.item-table {
    margin-top: 30px;
    margin-bottom: 24px;
}


/* Form related */

.card-header {
    font-size: 1.2em;
    text-align: center;
}

.alert {
    font-size: 0.8em;
}

.file-upload-btn {
    border: 1px solid #ced4da;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

.code {
    border: 1px solid #ced4da;
    border-radius: 5px;
    color: #e76f51;
    background-color: #f8f9fa;
    padding: 3px 6px 3px 6px;
    font-family: monospace;
}

/* Override Bootstrap button color */
.btn-secondary {
    color: #FFFFFF;
    background-color: #838383;
    border: 1px solid #838383;
}

/* Override Bootstrap button padding */
.btn {
    padding-left: 10px;
    padding-right: 10px;
}

